# Kronikarz

./: .dockerignore  .gitattributes  .gitignore  CODEOWNERS  Dockerfile.backend  Dockerfile.exporter  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  init.sh  nginx.conf  package-lock.json
.github/: pull_request_template.md
.github/workflows/: check-formating.yml  docker-publish.yml
.scripts/: format.sh  install.sh  make_presentation.sh  openapi.sh  runBackend.sh  runExporter.sh  runFrontend.sh
backend/: backend_runner.sh  pyproject.toml
backend/app/: __init__.py  __main__.py  database.py  field_sets.py  files.py  image.py  models.py  node.py  object_store.py  tables.py  trees.py  users.py  utils.py
backend/app/surreal_orm/: README.md  __init__.py  base.py  relation.py  session.py  tables.py  utils.py
backend/tests/: node_values_crud.sh
docs/: stos.md  uwarunkowania.md
exporter/: exporter_runner.sh  pyproject.toml
exporter/app/: __init__.py  client.py
frontend/: .gitignore  .prettierignore  README.md  openapiRequest.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: createApiClient.ts  entry.client.tsx  entry.server.tsx  main.css  root.tsx
frontend/app/client/: AppClient.ts  index.ts
frontend/app/client/models/: BearerResponse.ts  Body_auth_jwt_login_api_auth_jwt_login_post.ts  ErrorModel.ts  Node.ts  NodeRelation.ts  Tree.ts  UserCreate.ts  UserRead.ts  UserUpdate.ts
frontend/app/client/services/: AuthService.ts  DataService.ts  DefaultService.ts  UsersService.ts
frontend/app/components/: AppBarRight.tsx  FakeButton.tsx  Feedback.tsx  Loader.tsx  ModalForm.tsx  VisNetwork.tsx
frontend/app/routes/: exportJson.ts  file.ts  home.tsx  image.ts  index.tsx  login.tsx  logout.tsx  register.tsx
frontend/app/routes/editor/: $treeID.tsx
frontend/app/routes/editor/$treeID/: $nodeID.tsx  addFieldSet.tsx  addPerson.tsx  fieldSets.tsx  index.tsx  people.tsx
frontend/app/routes/home/: addTree.tsx  index.tsx
frontend/app/routes/home/edit/: $treeID.tsx
frontend/app/styles/: theme.ts
frontend/app/utils/: Export.tsx  cookieUtils.tsx  image.tsx
frontend/src/: root.tsx
frontend/src/components/: CookieConsent.tsx
production/: docker-compose.yml
