[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Grzegorz Koperwas <admin@grzegorzkoperwas.site>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
fastapi-users = "^10.1.5"
uvicorn = "^0.18.3"
surrealdb = {git = "https://github.com/HakierGrzonzo/surrealdb.py"}
miniopy-async = {git = "https://github.com/HakierGrzonzo/miniopy-async.git"}
wand = "^0.6.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
