[tool.poetry]
name = "exporter"
version = "0.1.0"
description = "An exporter microservice for Kronikarz"
authors = ["Grzegorz Koperwas <admin@grzegorzkoperwas.site>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
openapi-python-client = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
